demo/BlazorMart/resource-manifests/istio/blazormart-virtualservice-backend.yaml
# This controls the routing from the ingress gateway to internal services
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blazormart-external-services-backend
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway
  http:
  - match:
    - uri:
        prefix: '/Inventory.Inventory'
    route:
    - destination:
        host: blazormart-backend
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: blazormart-backend-destination
spec:
  host: blazormart-backend
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    portLevelSettings:
    - port:
        number: 443
      tls:
        mode: SIMPLE
