demo/BlazorMart/resource-manifests/istio/blazormart-virtualservice-external.yaml
# This controls the routing from the ingress gateway to internal services
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blazormart-external-services
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway
  http:
  - match:
    - uri:
        regex: '.*'
    route:
    - destination:
        host: blazormart-frontend
        port:
          number: 80
