demo/BlazorMart/resource-manifests/istio/blazormart-virtualservice-frontend.yaml
# This controls the routing from the ingress gateway to internal services
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blazormart-external-services-frontend
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway
  http:
  - match:
    - uri:
        regex: '.*'
    route:
    - destination:
        host: blazormart-frontend
